--- a/assets/themes/the-minimum/css/style.css
+++ b/assets/themes/the-minimum/css/style.css
@@ -357,7 +357,7 @@ pre {
 }
 .unit-article img {
   display: block;
-  margin-left: auto;
+  /*margin-left: auto;*/
   margin-right: auto;
 }
 .unit-article img.left {
@@ -803,25 +803,25 @@ pre {
 */
 @media only screen and (min-width: 1410px) {
   .the-header .unit-inner {
-    width: 88.125em;
+    width: 75.125em;
   }
   .the-header .logo {
-    width: 43.125em;
+    width: 75.125em;
   }
   .the-header .nav-global {
-    width: 43.125em;
+    width: 75.125em;
   }
   .unit-article .unit-head-inner, .unit-article .entry-content, .unit-article .misc-content {
-    width: 43.125em;
+    width: 75.125em;
   }
   .unit-article .unit-foot-inner {
-    width: 88.125em;
+    width: 75.125em;
   }
   .unit-article .unit-foot .pagination {
-    width: 54.375em;
+    width: 75.375em;
   }
   .unit-article .unit-foot .gotop {
-    padding-right: 360px;
+    padding-right: 40px;
     width: 9.375em;
   }
   .layout-page .unit-body .unit-body-inner {
@@ -846,7 +846,7 @@ pre {
   .the-footer .unit-inner ol,
   .the-footer .unit-inner dl,
   .the-footer .unit-inner blockquote {
-    margin-left: 360px;
-    margin-right: 360px;
+    margin-left: 108px;
+    margin-right: 108px;
   }
 }
