--- a/_includes/themes/the-minimum/default.html
+++ b/_includes/themes/the-minimum/default.html
@@ -18,7 +18,7 @@
 	<header class="the-header">
 		<div class="unit-head">
 			<div class="unit-inner unit-head-inner">
-				<p class="logo"><img src="assets/images/tksc-logo.jpg" width="82px" heght="82px"><a href="{{ HOME_PATH }}"> {{ site.title }}</a></p>
+				<p class="logo"><img src="{{site.baseurl}}/assets/images/tksc-logo.jpg" width="82px" heght="82px"><a href="{{ HOME_PATH }}"> {{ site.title }}</a></p>
 				<nav class="nav-global">
 					<ul>
 						<li class="archive"><a href="/">top</a></li>
